--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/admindb?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
