--- a/application.properties
+++ b/application.properties
@@ -2,5 +2,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/admindb?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
